--- a/OtpGenerator/style.css
+++ b/OtpGenerator/style.css
@@ -11,18 +11,20 @@ body {
 
 .container {
   display: flex;
-  gap: 30px;
+  gap: 40px;
   flex-wrap: wrap;
 }
 
 .box {
   background-color: #ffffff;
   border: 1px solid #ddd;
-  padding: 30px;
+  padding: 40px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 250px;
   text-align: center;
+  border: #0056b3 2px solid;
+
 }
 
 .box h2 {
@@ -44,6 +46,7 @@ button {
   background-color: #007bff;
   color: white;
   font-weight: bold;
+  font-size: 1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -54,6 +57,8 @@ button:hover {
 }
 
 p {
-  margin-top: 10px;
-  font-weight: bold;
+  margin-top: 24px;
+  font-weight: bolder;
+  font-size: x-large;
+  
 }
